# calling-plan

./: .coverage  .gitignore  Makefile  Pipfile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: django.yml  python-app.yml
calling_plan/: asgi.py  decorators.py  django_assertions.py  settings.py  urls.py  wsgi.py
calling_plan/call/: apps.py  urls.py  views.py
calling_plan/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
calling_plan/core/migrations/: 0001_initial.py
calling_plan/military/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
calling_plan/military/migrations/: 0001_initial.py  0002_auto_20210314_1909.py  0002_military_telegram_id.py  0003_auto_20211120_1737.py
calling_plan/pages/: apps.py  urls.py  views.py
calling_plan/pages/tests/: test_home.py
calling_plan/telegram_bot/: apps.py  funs_telegram_bot.py  urls.py  views.py
contrib/: env-sample  extensions.conf  manage.conf  sip.conf
docker/asterisk/: Dockerfile
docker/freeswitch/: Dockerfile  readme.md
military-call/: app.py
military-call/ext/site/: main.py
military_call/templates/: index.html
old-program/asterisk/: extensions.conf
old-program/asterisk/agi-bin/: .loop2.php.swp  call-file.php  gravarel.php  loop.php  loop2.php
old-program/plano-de-chamada/: index.php
old-program/plano-de-chamada/_crud/: conexao.php
old-program/plano-de-chamada/_css/: alertas.css  estilo.css  formulario.css
old-program/plano-de-chamada/_js/: validacpf.js
tests/: conftest.py  test_app.py
(+28 files in other folders)
