[tool.poetry]
name = "calling-plan"
version = "0.1.0"
description = "App para acionamento de militares"
authors = ["Haddly Trindade <haddleytrindade@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.15"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.2"
django-s3-folder-storage = "^0.5"
Collectfast = "^2.2.0"
python-decouple = "^3.5"
django-crispy-forms = "^1.13.0"
django-extensions = "^3.1.5"
python-telegram-bot = "^13.8.1"
black = "^21.11b1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
ipython = "^7.29.0"
django-debug-toolbar = "^3.2.2"
pytest-django = "^4.4.0"
model-bakery = "^1.3.3"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
